fix: added hidden overflow for rocket

--- a/assets/css/_freddy.scss
+++ b/assets/css/_freddy.scss
@@ -5,6 +5,7 @@
 
 #freddy {
   position: relative;
+  overflow: hidden;
   #stars {
     position: absolute;
     background-color: #191d21;
